Working on Shopping Cart and Game Details

--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Index.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Index.cshtml
@@ -39,7 +39,7 @@
                 }
                 
                 <a asp-action="Details" asp-route-id="@item.RecordId">Details</a> |
-                <a asp-controller="Cart" asp-action="Buy" asp-route-id="@item.RecordId">Add To Cart</a> <br />
+                <a asp-action="ConfirmShoppingCart" asp-route-id="@item.RecordId">Add To Cart</a> <br />
             </td>
         </tr>
 }
