--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Details.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Details.cshtml
@@ -36,7 +36,7 @@
 <div class="row">
     <div class="col-md-12">
         <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Add", "Wishlist")'">Add To Wishlist</button>
-        <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Add", "Cart")'">Add To Cart</button>
+        <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("ConfirmShoppingCart", "Game")'">Add To Cart</button>
     </div>
 </div>
 
