--- a/src/ConestogaVirtualGameStore.Web/Views/ShoppingCart/Checkout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/ShoppingCart/Checkout.cshtml
@@ -3,5 +3,12 @@
     ViewData["Title"] = "Checkout";
 }
 
-<h2>Checkout</h2>
+<h2>Thank you for making a purchease!</h2>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-2"><button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Game")'">Back to Games</button></div>
+        <div class="col-md-4"></div>
+    </div>
+</div>
