--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Index.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Index.cshtml
@@ -6,6 +6,18 @@
 
 <h2>Games</h2>
 
+<div class="row">
+    <div class="col-md-4">
+        <form asp-controller="Game" asp-action="Index">
+            <p>
+                Title: <input type="text" name="id">
+                <input class="btn btn-primary" type="submit" value="Search" />
+                <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Game")'">Reset</button>
+            </p>
+        </form>
+    </div>
+</div>
+
 <p>
     @if (User.Identity.IsAuthenticated)
     {
