Added database changes to attach cart and review to a user

--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Index.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Index.cshtml
@@ -51,7 +51,10 @@
                 }
                 
                 <a asp-action="Details" asp-route-id="@item.RecordId">Details</a> |
+            @if (User.Identity.IsAuthenticated)
+            { 
                 <a asp-action="ConfirmShoppingCart" asp-route-id="@item.RecordId">Add To Cart</a> <br />
+            }
             </td>
         </tr>
 }
