--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Details.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Details.cshtml
@@ -57,24 +57,30 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-9">&nbsp;</div>
-    <div class="col-md-3">
-        <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("Add", "Wishlist")'">Add To Wishlist</button>
-        <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("ConfirmShoppingCart", "Game", new { @id = Model.RecordId })'">Add To Cart</button>
+@if (User.Identity.IsAuthenticated)
+{
+    <div class="row">
+        <div class="col-md-9">&nbsp;</div>
+        <div class="col-md-3">
+            <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("Add", "Wishlist")'">Add To Wishlist</button>
+            <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("ConfirmShoppingCart", "Game", new {@id = Model.RecordId})'">Add To Cart</button>
+        </div>
     </div>
-</div>
+}
 
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
 
-<div class="row">
-    <div class="col-md-11">&nbsp;</div>
-    <div class="col-md-1">
-        <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("CreateReview", "Game", new { @id = Model.RecordId })'">Add Review</button>
+@if (User.Identity.IsAuthenticated)
+{
+    <div class="row">
+        <div class="col-md-11">&nbsp;</div>
+        <div class="col-md-1">
+            <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("CreateReview", "Game", new {@id = Model.RecordId})'">Add Review</button>
+        </div>
     </div>
-</div>
+}
 
 @foreach (var review in @Model.Reviews)
 {
