Wishlist Update/Fix - Index View Still not working

--- a/src/ConestogaVirtualGameStore.Web/Views/Game/AddGameToWishList.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/AddGameToWishList.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ConestogaVirtualGameStore.Web.Models.Game
 
 @{
-    ViewData["Title"] = "ConfirmShoppingCart";
+    ViewData["Title"] = "WishList";
 }
 
 <h2 class="text-center">@Model.Title was added to the Wishlist!</h2>
