Review Approval Done

--- a/src/ConestogaVirtualGameStore.Web/Views/Account/AccessDenied.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Account/AccessDenied.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Access denied";
 }
 
+<br/>
+<br />
+<br />
+<br />
+
 <header>
-    <h2 class="text-danger">ViewData["Title"]</h2>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h1 class="text-danger">You do not have access to this resource.</h1>
 </header>
