--- a/src/ConestogaVirtualGameStore.Web/Views/Wishlist/Details.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Wishlist/Details.cshtml
@@ -11,35 +11,16 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Title)
+            @Html.DisplayFor(model => model.User)
         </dd>
         <dt>
-<<<<<<< HEAD
-            @Html.DisplayNameFor(model => model.Price)
+            @Html.DisplayNameFor(model => model.Game)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ImageFileName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ImageFileName)
-=======
-            @Html.DisplayNameFor(model => model.ImageFileName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ImageFileName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Price)
->>>>>>> 79d41529a5a71522eccdc10e27525a2bcf16d645
+            @Html.DisplayFor(model => model.Game.Description)
         </dd>
     </dl>
 </div>
