--- a/src/ConestogaVirtualGameStore.Web/Views/Wishlist/Index.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Wishlist/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ConestogaVirtualGameStore.Web.Models.Game>
+﻿@model IEnumerable<ConestogaVirtualGameStore.Web.Models.Wishlist>
 
 @{
     ViewData["Title"] = "Wishlist";
@@ -8,33 +8,24 @@
 
 <table class="table">
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    <img class="list-image" src="~/images/games/@item.ImageFileName" />
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    $@Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
-                    <a asp-action="Delete" asp-route-id="@item.RecordId">Remove</a>
-                </td>
-            </tr>
-        }
+    @foreach (var item in Model)
+    {
         <tr>
-            <td></td>
-            <td></td>
+            <td>
+                <img class="list-image" src="~/images/games/@item.Game.ImageFileName"/>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Game.Title)
+            </td>
+            <td>
+                $@Html.DisplayFor(modelItem => item.Game.Price)
+            </td>
+            <td>
+                <a asp-controller="Game" asp-action="Details" asp-route-id="@item.Game.RecordId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.RecordId">Remove</a> |
+                <a asp-controller="Game" asp-action="ConfirmShoppingCart" asp-route-id="@item.Game.RecordId">Add To Cart</a> <br />
+            </td>
         </tr>
+    }
     </tbody>
 </table>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"></div>
-    </div>
-</div>
