--- a/src/ConestogaVirtualGameStore.Web/Views/Friends/Index.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Friends/Index.cshtml
@@ -1,19 +1,16 @@
 ﻿@model IEnumerable<ConestogaVirtualGameStore.Web.Models.ApplicationUser>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Friends/Family Member List";
 }
 
-<h2>Index</h2>
+<h2>Friends/Family Member  List</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.UserName)
+                    User Name
                 </th>
             <th></th>
         </tr>
