--- a/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                     <li><a asp-area="" asp-controller="Wishlist" asp-action="Index" asp-route-id="">Wishlist</a></li>
                     <li><a asp-area="" asp-controller="ShoppingCart" asp-action="Index">My Cart</a></li>
                     <li><a asp-area="" asp-controller="Friends" asp-action="Index">Friends</a></li>
+                    <li><a asp-area="" asp-controller="Users" asp-action="Index">Profiles</a></li>
                     
                     @if (User.Identity.IsAuthenticated)
                     {
