--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Details.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Details.cshtml
@@ -58,22 +58,16 @@
 </div>
 
 <div class="row">
-    <div class="col-md-9">&nbsp;</div>
-    <div class="col-md-3">
+    <div class="col-md-8">&nbsp;</div>
+    <div class="col-md-4">
         <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("AddGameToWishList", "Game", new { @id = Model.RecordId })'">Add To Wishlist</button>
         <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("ConfirmShoppingCart", "Game", new {@id = Model.RecordId})'">Add To Cart</button>
+        <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("CreateReview", "Game", new {@id = Model.RecordId})'">Add Review</button>
     </div>
 </div>
 
 <div>
     <a asp-action="Index">Back to List</a>
-</div>
-
-<div class="row">
-    <div class="col-md-11">&nbsp;</div>
-    <div class="col-md-1">
-        <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("CreateReview", "Game", new {@id = Model.RecordId})'">Add Review</button>
-    </div>
 </div>
 
 @if (User.IsInRole("Moderator"))
@@ -95,7 +89,7 @@
             <div class="col-md-4">
                 @if (!review.IsApproved)
                 {
-                    <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("Approve", "Reviews", new {@id = Model.RecordId})'">Approve</button>
+                    <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("Approve", "Reviews", new {@id = review.RecordId})'">Approve</button>
                 }
             </div>
         </div>
