--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Index.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Index.cshtml
@@ -27,6 +27,12 @@
         }
     }
 </p>
+
+@if (!Model.Any())
+{
+    <h2>No Games Found!</h2>
+}
+
 <table class="table">
     <tbody>
 @foreach (var item in Model) {
