--- a/src/ConestogaVirtualGameStore.Web/Views/ShoppingCart/Checkout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/ShoppingCart/Checkout.cshtml
@@ -8,7 +8,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4"></div>
-        <div class="col-md-2"><button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Game")'">Back to Games</button></div>
-        <div class="col-md-4"></div>
+        <div class="col-md-3">
+            <button type="submit" class="btn btn-primary" onclick="location.href = '@Url.Action("Index", "Game")'">Back to Games</button>
+            <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Game")'">Download Games</button>
+        </div>
+        <div class="col-md-3"></div>
     </div>
 </div>
