--- a/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,18 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">
-                    <img src="~/images/game_store_icon1@0.05x.png" height="44" width="44" alt="Conestoga Virtual Game Store Logo" />
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        if (User.IsInRole("Employee"))
+                        {
+                            <img src="~/images/employee_logo.png" height="44" width="44" alt="Conestoga Virtual Game Store Logo" />
+                        }
+                    }
+                    else
+                    {
+                        <img src="~/images/game_store_icon1@0.05x.png" height="44" width="44" alt="Conestoga Virtual Game Store Logo" />
+
+                    }
                 </a>
             </div>
             <div class="navbar-collapse collapse">
@@ -39,7 +50,7 @@
                     <li><a asp-area="" asp-controller="ShoppingCart" asp-action="Index">My Cart</a></li>
                     <li><a asp-area="" asp-controller="Friends" asp-action="Index">Friends</a></li>
                     <li><a asp-area="" asp-controller="Users" asp-action="Index">Profiles</a></li>
-                    
+
                     @if (User.Identity.IsAuthenticated)
                     {
                         if (User.IsInRole("Employee"))
