Added favicon and tool tip for logo to project

--- a/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="shortcut icon" href="~/images/favicon.ico" type="image/x-icon">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -31,13 +32,12 @@
                     {
                         if (User.IsInRole("Employee"))
                         {
-                            <img src="~/images/employee_logo.png" height="44" width="44" alt="Conestoga Virtual Game Store Logo" />
+                            <img src="~/images/employee_logo.png" height="44" width="44" alt="Employee Portal Logo" data-toggle="tooltip" data-placement="top" title="Employee Portal"/>
                         }
                     }
                     else
                     {
-                        <img src="~/images/game_store_icon1@0.05x.png" height="44" width="44" alt="Conestoga Virtual Game Store Logo" />
-
+                        <img src="~/images/game_store_icon1@0.05x.png" height="44" width="44" alt="Conestoga Virtual Game Store Logo"  data-toggle="tooltip" data-placement="top" title="Conestoga Virtual Game Store Logo"/>
                     }
                 </a>
             </div>
@@ -75,7 +75,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Conestoga Virtual Game Store</p>
+            <p>&copy;2017 Awesome United Corporation. All rights reserved. </p>
         </footer>
     </div>
 
