--- a/src/ConestogaVirtualGameStore.Web/Views/Game/Create.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Game/Create.cshtml
@@ -43,6 +43,15 @@
                 <span asp-validation-for="Publisher" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="File" class="control-label"></label>
+                @Html.TextBoxFor(m => m.File, new { type = "file" })
+            </div>
+            <div class="form-group">
+                <label asp-for="Publisher" class="control-label"></label>
+                <input asp-for="Publisher" class="form-control" />
+                <span asp-validation-for="Publisher" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
