Added image file and design for events page

--- a/src/ConestogaVirtualGameStore.Web/Views/Event/Create.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Event/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConestogaVirtualGameStore.Web.Models.Event
+﻿@model ConestogaVirtualGameStore.Web.Models.ViewModels.EventCreateViewModel
 
 @{
     ViewData["Title"] = "Create New Event";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -26,6 +26,10 @@
                 <label asp-for="Date" class="control-label"></label>
                 <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="File" class="control-label"></label>
+                <input asp-for="File" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
