--- a/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
+++ b/src/ConestogaVirtualGameStore.Web/Views/Shared/_Layout.cshtml
@@ -32,7 +32,8 @@
                     {
                         if (User.IsInRole("Employee"))
                         {
-                            <img src="~/images/employee_logo.png" height="44" width="44" alt="Employee Portal Logo" data-toggle="tooltip" data-placement="top" title="Employee Portal"/>
+                            <img src="~/images/employee_logo.png" height="44" width="44" alt="Employee Portal Logo" data-toggle="tooltip" data-placement="top" title="Employee Portal" class="pull-left"/>
+                            <img src="~/images/game_store_icon1@0.05x.png" height="44" width="44" alt="Conestoga Virtual Game Store Logo" data-toggle="tooltip" data-placement="top" title="Conestoga Virtual Game Store Logo" />
                         }
                     }
                     else
